--- a/app/assets/javascripts/admin/addon/components/delete-posts-confirmation.hbs
+++ b/app/assets/javascripts/admin/addon/components/delete-posts-confirmation.hbs
@@ -2,6 +2,7 @@
   @title={{html-safe
     (i18n "admin.user.delete_posts.confirmation.title" username=this.username)
   }}
+  @closeModal={{@closeModal}}
 >
   <:body>
     <p>{{html-safe
